objects/ASI_MFM_Sub_brand_Allocation_Detail__c.object
<CustomObject>
    <fields>
        <fullName>ASI_MFM_Percentage__c</fullName>
        <label>Percentage</label>
        <precision>18</precision>
        <scale>1</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_Allocation__c</fullName>
        <label>Sub-brand Allocation</label>
        <referenceTo>ASI_MFM_Sub_brand_Allocation__c</referenceTo>
        <relationshipLabel>ASI MFM Sub-brand Allocation Details</relationshipLabel>
        <relationshipName>ASI_MFM_Sub_brand_Allocation_Details</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <reparentableMasterDetail>true</reparentableMasterDetail>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand_Code__c</fullName>
        <formula>ASI_MFM_Sub_brand__r.ASI_MFM_Sub_brand_Code__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Sub-brand Code</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ASI_MFM_Sub_brand__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Sub-brand</label>
        <referenceTo>ASI_MFM_Sub_brand__c</referenceTo>
        <relationshipLabel>ASI MFM Sub-brand Allocation Details</relationshipLabel>
        <relationshipName>ASI_MFM_Sub_brand_Allocation_Details</relationshipName>
        <type>Lookup</type>
    </fields>
    <label>ASI MFM Sub-brand Allocation Detail</label>
    <nameField>
        <displayFormat>SB-{0000000}</displayFormat>
        <label>ASI MFM Sub-brand Allocation Detail Numb</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>ASI MFM Sub-brand Allocation Details</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>